Fixed conversation-entry wrapping; Aligned entries to bottom; Adjusted main panel UI

--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,12 @@
     float: right;
 }
 
+.badge-custom {
+    margin-top: -3px;
+    margin-left: 3px;
+    padding: 3px 8px 3px 7px;
+}
+
 .middle-pane {
     position: relative;
     display: flex;
@@ -141,22 +147,37 @@
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .conversation-header {
     flex: 0 1 auto;
+    margin-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.conversation-actions {
+    margin-top: 5px;
 }
 
 .conversation-content {
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     overflow-y: auto;
-    margin-bottom: 50px
+    margin-bottom: 100px;
+    border-top: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-top: auto;
 }
 
 .conversation-entry {
     position: relative;
-    padding: 10px 0 20px 0;
+    padding: 15px 10px 15px 10px;
     border-top: 1px solid #eee;
+    width: 100%;
 }
 
 .conversation-entry:first-child {
@@ -167,16 +188,16 @@
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    position: absolute;
-    top: 10px;
+    float: left;
     left: 0;
 }
 
 .conversation-text {
-    margin-left: 60px;
+    margin-left: 70px;
 }
 
 .conversation-reply {
+    padding: 0 30px 30px 30px;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -230,6 +251,11 @@ html, body, .container-fluid, .row {
 
 .resource-file:hover .resource-file-operations {
     display: block;
+}
+
+.resource-actions {
+    padding-top: 10px;
+    max-width: 80%;
 }
 
 
